--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,13 @@ body {
   box-sizing: border-box;
 }
 
+.table {
+  width: 100%;
+  height: 315px;
+  border-radius: 20px;
+  position: relative;
+}
+
 .lb-root {
   --lb-accent: #44f;
 }
